# SuggestionTrie

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benches.rs
examples/list_files/: Cargo.toml  README.md
examples/list_files/src/: main.rs
src/: lib.rs  suggestion.rs  trie.rs
src/suggestion/: suggestion_structs.rs
src/trie/: fuzzy_swaps.rs  trie_base_methods.rs  trie_fuzzy_search.rs  trie_search.rs  trie_structs.rs
tests/: tests.rs
