[package]
authors = ["Angelo L. B. Rodem"]
name = "suggestion_trie"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/angelorodem/SuggestionTree"
homepage = "https://github.com/angelorodem/SuggestionTree"
description = """
A Radix trie for suggestion search, it allows to search for data indexed by a set of keywords fast.
"""
categories = ["data-structures", "algorithms"]
keywords = ["trie", "suggestion", "search", "autocomplete", "data-structure"]
exclude = ["doc_imgs/", ".*"]

[[bench]]
name = "benches"

[dependencies]
rand = "^0.8"
lazy_static = "^1.4.0"
ahash = "^0.8.3"
