[package]
authors = ["Angelo L. B. Rodem"]
name = "suggestion_trie"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/angelorodem/SuggestionTrie"
homepage = "https://github.com/angelorodem/SuggestionTrie"
description = """
A Radix trie for suggestion search, it allows to search for data indexed by a set of keywords fast.
"""
categories = ["data-structures", "algorithms"]
keywords = ["trie", "suggestion", "search",  "data-structure"]
exclude = ["doc_imgs/", ".*"]

[[bench]]
name = "benches"

[dependencies]
rand = "^0.8"
lazy_static = "^1.4.0"
hashbrown = "0.14"
