[package]
name = "list_files"
version = "0.1.0"
edition = "2021"
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suggestion_trie = { path = "../../"}
tui = "0.19"
crossterm = "0.26.1"
argh = "0.1.10"
rand = "0.8.5"
unicode-width = "0.1"
walkdir = "2.3.3"